--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,16 @@ body{
 
 /* UTILITY */
 
+.float-left{
+  float: left;
+}
+
+.clearfix::after{
+  content: "";
+  display: table;
+  clear: both;
+}
+
 /* HEADER */
 
 header p{
@@ -36,7 +46,19 @@ header p{
   background-color: antiquewhite;
   width: 65%;
   margin: 60px auto;
-  height: 200px;
   text-align: center;
   font-size: 18px;
+}
+
+.cards{
+  margin-top: 50px;
+  padding: 40px;
+}
+
+.card-box{
+  background-color: #0f0e17;
+  width: calc(100% / 4);
+  height: 100px;
+  margin-right: 30px;
+  margin-bottom: 50px;
 }
