--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ header p{
 
 .card-box{
   background-color: #0f0e17;
+  box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.70);
 
   /* calcolo la width delle cardbox */
   --widthA: calc(100% - 90px);
